...
            android:layout_marginLeft="80dp"
            android:onClick="buttonListOrders"
            android:text="Orders" />
    </LinearLayout>

    <Button
        android:id="@+id/adminListOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="674dp"
        android:text="List of Order IDs" />

    <Button
        android:id="@+id/adminListUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="674dp"
        android:text="List of User IDs" />
...
